--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background3.jpg" alt="Mobirise">
+                        <a href="herovariants.html"><img src="assets/images/hero-variants-676x526.png" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>
@@ -76,7 +76,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/g">build a website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
