--- a/landsofmyth.html
+++ b/landsofmyth.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
 
     
 
@@ -172,7 +172,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background224.jpg" alt="Mobirise">
+                        <img src="assets/images/background20.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
@@ -188,7 +188,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background325.jpg" alt="Mobirise">
+                        <img src="assets/images/background31.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
