--- a/index.html
+++ b/index.html
@@ -75,8 +75,22 @@
     </div>
 </section>
 
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section article content9 cid-rkqwi0a3lm" id="content9-o">
+    
+     
 
-  <section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+    <div class="container">
+        <div class="inner-container" style="width: 55%;">
+            <hr class="line" style="width: 100%;">
+            <div class="section-text align-center mbr-fonts-style display-7">
+                    This is a fan site dedicated to the boardgame Myth. It is completely unofficial and not affiliated with the original authors and current owners of Myth. &nbsp;</div>
+            <hr class="line" style="width: 100%;">
+        </div>
+        </div>
+</section>
+
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
