--- a/thedeepdark.html
+++ b/thedeepdark.html
@@ -42,12 +42,12 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-4" href="landsofmyth_downloads.html">Download</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="landsofmyth_downloads.html">Download</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
 
     
 
@@ -76,10 +76,10 @@
 
     <div class="container">
         <div class="inner-container" style="width: 66%;">
-            <hr class="line" style="width: 25%;">
+            <hr class="line" style="width: 100%;">
             <div class="section-text align-center mbr-white mbr-fonts-style display-5"><strong>The Deep Dark</strong> brings <strong>dungeon crawling</strong> to Myth. It is an exiting new way to play that combines exploration with the typical Myth combat. Heroes will explore vast ruins, overcome perilous events, face deadly monsters and hopefully make it out alive with some treasure. You can play The Deep Dark standalone or seamlessly integrate it with my continuous campaign mod <a href="landsofmyth.html" class="text-primary">The Lands of Myth</a>.<strong> 
 </strong></div>
-            <hr class="line" style="width: 25%;">
+            <hr class="line" style="width: 100%;">
         </div>
     </div>
 </section>
@@ -167,7 +167,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background26.jpg" alt="Mobirise">
+                        <img src="assets/images/background20.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
@@ -183,7 +183,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background37.jpg" alt="Mobirise">
+                        <img src="assets/images/background31.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
