--- a/herovariants.html
+++ b/herovariants.html
@@ -42,12 +42,12 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-4" href="landsofmyth_downloads.html">Download</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="landsofmyth_downloads.html">Download</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
 
     
 
