--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="landsofmyth.html"><img src="assets/images/logo-final-v3-1368x1094.png" alt="Mobirise" title=""></a>
+                        <a href="landsofmyth.html"><img src="assets/images/logo-final-v3-676x541.png" alt="Lands of Myth" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>
@@ -59,13 +59,13 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="herovariants.html"><img src="assets/images/hero-variants-676x526.png" alt="Mobirise" title=""></a>
+                        <a href="herovariants.html"><img src="assets/images/hero-variants-676x541.png" alt="Hero Variants" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>
                             Hero Variants</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise verfügt über viele Blocks in vorhandenen Themes. Obwohl diese Blocks bereits voreingestellt sind, sie sind sehr flexibel. <a href="herovariants.html">More...</a></p>
+                            These hero variants are complete overhauls of existing heroes, coming with all hero cards and a detailed hero description sheet.&nbsp;<a href="herovariants.html">More...</a></p>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section article content9 cid-rkqwi0a3lm" id="content9-o">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="mbr-section article content9 cid-rkqwi0a3lm" id="content9-o">
     
      
 
