--- a/herovariants.html
+++ b/herovariants.html
@@ -50,7 +50,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-rnJzOs30fe" id="header16-14">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section class="header1 cid-rnJzOs30fe" id="header16-14">
 
     
 
@@ -173,7 +173,7 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">As you can see on the picture on the left, there are 3 different card types that allow the Spriggan to <strong>Grow</strong> his <strong>Sprout</strong>&nbsp;items. When starting the Spriggan only has his brown starting sprout items available and some of his white items. This allows the Spriggan to gain new, optional items by finding them like other heroes. There are also improved sprout items the Spriggan gains when reaching Journeyman level. These allow him to directly grow stronger items from the initial sprout. As you can also see there are often alternative items available that are usually optimized for dedicated situations - for example to improve the Spriggans defense or his attack capability.&nbsp;<br><br>I've also improved/changed many of the Spriggans cards and added various new cards (due to the removal of the old "Item" hero cards we got additional design space for new hero cards.</p>
+                                <p class="block-text mbr-fonts-style display-7">As you can see on the picture, there are 3 different card types that allow the Spriggan to <strong>Grow</strong> his <strong>Sprout</strong>&nbsp;items. When starting the Spriggan only has his brown starting sprout items available and some of his white items. This allows the Spriggan to gain new, optional items by finding them like other heroes. There are also improved sprout items the Spriggan gains when reaching Journeyman level. These allow him to directly grow stronger items from the initial sprout. As you can also see there are often alternative items available that are usually optimized for dedicated situations - for example to improve the Spriggans defense or his attack capability.&nbsp;<br><br>I've also improved/changed many of the Spriggans cards and added various new cards (due to the removal of the old "Item" hero cards we got additional design space for new hero cards.</p>
                             </div>
                         </div>
 
@@ -295,7 +295,7 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">On the left you can see one of the new <strong>Part</strong> cards. The card counts as both listed Parts simultaneously so you can use both Parts to build one of your <strong>Traps</strong>. The shown <em>Metal Casing and Bang Powder</em> card can be used to build the shown <em>Hurty Bangs</em> card without needing any additional Part cards. Most Traps now only need 2 different Part cards and it is much easier to come up with the needed Parts to build your Traps. <br>  
+                                <p class="block-text mbr-fonts-style display-7">On the picture you can see one of the new <strong>Part</strong> cards. The card counts as both listed Parts simultaneously so you can use both Parts to build one of your <strong>Traps</strong>. The shown <em>Metal Casing and Bang Powder</em> card can be used to build the shown <em>Hurty Bangs</em> card without needing any additional Part cards. Most Traps now only need 2 different Part cards and it is much easier to come up with the needed Parts to build your Traps. <br>  
 <br>You can also see one of the new <strong>Clockwork Ally</strong> cards on the left. As you can see it has to be built first but is then an Ongoing card. The Clockwork Ally will gain charges over time and can perform special abilities with them.&nbsp;<br></p>
                             </div>
                         </div>
