--- a/landsofmyth.html
+++ b/landsofmyth.html
@@ -50,7 +50,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
 
     
 
@@ -255,7 +255,7 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">Between quests heroes will often find themselves in the central village or town that is central to the region. This is their starting point to rest between adventures, buy and sell items and look out for new quests. Depending on the Darkness Influence new quest or travel options may become available, allowing the heroes to further venture into the Lands of Myth...</p>
+                                <p class="block-text mbr-fonts-style display-7">Between quests heroes will often find themselves in a village or town that is central to the region. This is their starting point to rest between adventures, buy and sell items and look out for new quests. Depending on the Darkness Influence new quest or travel options may become available, allowing the heroes to further venture into the Lands of Myth...</p>
                             </div>
                         </div>
 
@@ -458,7 +458,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"><strong>
                     Get the complete Lands of Myth content and start your adventure!&nbsp;</strong></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="landsofmyth_downloads.html" target="_blank">Download</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="landsofmyth_downloads.html">Download</a></div>
             </div>
         </div>
     </div>
