--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="features2 cid-rkkCxGeZ45" id="features2-h">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="features2 cid-rkkCxGeZ45" id="features2-h">
 
     
 
@@ -87,7 +87,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>
                             Lands of Myth</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Lands of Myth is a continuous campaign game mode for Myth. Your group of heroes will venture through the world, encounter various quests, dangerous monsters and try to push back the Darkness. <a href="landsofmyth.html">More...</a></p>
+                            Lands of Myth is a <strong>continuous campaign mod</strong> for Myth. Your group of heroes will venture through the world, encounter various quests, dangerous monsters and try to push back the Darkness. <a href="landsofmyth.html">More...</a></p>
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>
                             The Deep Dark</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            The Deep Dark brings dungeon crawling to Myth. Heroes will explore vast ruins, overcome perilous events, face deadly monsters and hopefully make it out alive with some treasure.<font color="#271200"><strong>&nbsp;<a href="thedeepdark.html">More...</a></strong></font></p>
+                            The Deep Dark brings <strong>dungeon crawling</strong> to Myth. Heroes will explore vast ruins, overcome perilous events, face deadly monsters and hopefully make it out alive with some treasure.<font color="#271200"><strong>&nbsp;<a href="thedeepdark.html">More...</a></strong></font></p>
                     </div>
                 </div>
             </div>
