--- a/thedeepdark.html
+++ b/thedeepdark.html
@@ -49,7 +49,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
 
     
 
@@ -114,7 +114,7 @@
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
                     <li><strong>SELECT YOUR HEROES</strong>&nbsp;- to start your journey into The Deep Dark just pick your group of heroes and choose a dungeon to explore!</li>
-                    <li><strong>EXPLORE DUNGEONS</strong>&nbsp;- each dungeon comes with a set of special dungeon quests you can try to accomplish. The dungeon itself is represented by a dedicated deck of cards, giving a birds-eye view of your surroundings. Step by step your group of heroes will move through monster infested tunnels, constantly trying to overcome perilious events and desperately trying to finish your chosen quest. If you play <a href="landsofmyth.html">Lands of Myth</a>&nbsp;dungeons seamlessly integrate into the regions your are playing.&nbsp;&nbsp;</li>
+                    <li><strong>SELECT A QUEST </strong>- each dungeon comes with a set of special dungeon quests you can try to accomplish. Before venturing into a dungeon you have to select a quest and follow the setup instructions.</li><li><strong>EXPLORE THE DUNGEON</strong>&nbsp;- The dungeon itself is represented by a dedicated deck of cards, giving a birds-eye view of your surroundings. Step by step your group of heroes will move through monster infested tunnels, constantly trying to overcome perilious events and desperately trying to finish your chosen quest. If you play <a href="landsofmyth.html">Lands of Myth</a>&nbsp;dungeons seamlessly integrate into the regions your are playing.&nbsp;&nbsp;</li>
                 </ol>
             </div>
         </div>
