--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="thedeepdark.html"><img src="assets/images/grimzim-presents...-small-400x282.png" alt="Grimzim proudly presents..." title=""></a>
+                        <img src="assets/images/grimzim-presents...-small-400x282.png" alt="Grimzim proudly presents..." title="">
                     </div>
                     <div class="card-box ">
                         
@@ -70,7 +70,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="features2 cid-rkkCxGeZ45" id="features2-h">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="features2 cid-rkkCxGeZ45" id="features2-h">
 
     
 
