--- a/herovariants.html
+++ b/herovariants.html
@@ -50,7 +50,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="header1 cid-rnJzOs30fe" id="header16-14">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="header1 cid-rnJzOs30fe" id="header16-14">
 
     
 
@@ -173,7 +173,7 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">As you can see on the picture, there are 3 different card types that allow the Spriggan to <strong>Grow</strong> his <strong>Sprout</strong>&nbsp;items. When starting the Spriggan only has his brown starting sprout items available and some of his white items. This allows the Spriggan to gain new, optional items by finding them like other heroes. There are also improved sprout items the Spriggan gains when reaching Journeyman level. These allow him to directly grow stronger items from the initial sprout. As you can also see there are often alternative items available that are usually optimized for dedicated situations - for example to improve the Spriggans defense or his attack capability.&nbsp;<br><br>I've also improved/changed many of the Spriggans cards and added various new cards (due to the removal of the old "Item" hero cards we got additional design space for new hero cards.</p>
+                                <p class="block-text mbr-fonts-style display-7">As you can see on the picture, there are 3 different card types that allow the Spriggan to <strong>Grow</strong> his <strong>Sprout</strong>&nbsp;items. When starting the Spriggan only has his brown starting sprout items available and some of his white items. This allows the Spriggan to gain new, optional items by finding them like other heroes. There are also improved sprout items the Spriggan gains when reaching Journeyman level. These allow him to directly grow stronger items from the initial sprout. As you can also see there are often alternative items available that are usually optimized for dedicated situations - for example to improve the Spriggans defense or his attack capability.&nbsp;<br><br>I've also improved/changed many of the Spriggans cards and added various new cards - the removal of the old "item" hero cards opened up additional design space for new hero cards.</p>
                             </div>
                         </div>
 
@@ -788,7 +788,7 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">On the picture you can see the new tokens I've created for the new <strong>Chi</strong> mechanic. Of course, you can also use any other means to track your Chi, from glass beads to a simple six sided dice. You can also see some of the new <strong>Fist Items</strong> that come with my hero variant. Choosing the appropriate fighting style is no longer dependent on any particula stance so there's more design space for new and interesting "items". <br><br>You can also see the three basic <strong>Stances</strong> the Monk comes with: <strong>Plum Blossom</strong>, <strong>Tiger Fist</strong> and <strong>Iron Skin</strong>. Each stance grants a unique bonus - from enhanced movement to increased chances to hit enemies to a greatly improved defense. The normal Monk cards do no longer require a Stance to be active. In addition most cards allow the Monk to spend <strong>Chi</strong> to further improve the cards effect.</p>
+                                <p class="block-text mbr-fonts-style display-7">On the picture you can see the new tokens I've created for the new <strong>Chi</strong> mechanic. Of course, you can also use any other means to track your Chi, from glass beads to a simple six sided dice. You can also see some of the new <strong>Fist Items</strong> that come with my hero variant. Choosing the appropriate fighting style is no longer dependent on any particula stance so there's more design space for new and interesting "items". <br><br>You can also see the three basic <strong>Stances</strong> the Monk comes with: <em>Plum Blossom</em>, <em>Tiger Fist</em> and <strong>Iron Skin</strong>. Each stance grants a unique bonus - from enhanced movement to increased chances to hit enemies to a greatly improved defense. The normal Monk cards do no longer require a <strong>Stance</strong> to be active. In addition most cards allow the Monk to spend <strong>Chi</strong> to further improve the cards effect. There are many great card synergies in the Monk's deck. To give an impressive example: the <em>Plum Blossom Stance</em> increases the Monks base movement by 1 and also grants +1 MP to any <strong>Move </strong>card played. Together with a single <em>Hustle </em>card and by spending 1 <strong>Chi </strong>the Monk has total movement of 7 squares (2 base movement at Novice rank +1 MP due to P<em>lum Blossom</em> + 2 from the <em>Hustle </em>card + 1 MP from <em>Plum Blossom</em> <strong>Stance </strong>on the <em>Hustle </em>card and +1 MP for spending 1 <strong>Chi </strong>on the <em>Hustle </em>card). &nbsp;</p>
                             </div>
                         </div>
 
