--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="features2 cid-rkkCxGeZ45" id="features2-h">
+<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="features2 cid-rkkCxGeZ45" id="features2-h">
 
     
 
@@ -148,12 +148,12 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="page6.html"><img src="assets/images/individual-mods-676x541.png" alt="Individual Mods" title=""></a>
+                        <a href="mods.html"><img src="assets/images/individual-mods-676x541.png" alt="Individual Mods" title=""></a>
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>
                             Individual Mods</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">These mods may be used to enhance normal Myth games, even without all other downloads. Note that all of these mods are also included in Lands of Myth. <a href="page6.html">More...</a></p><p><a href="page6.html"></a><br></p><p></p>
+                        <p class="mbr-text mbr-fonts-style display-7">These mods may be used to enhance normal Myth games, even without all other downloads. Note that all of these mods are also included in Lands of Myth. <a href="mods.html">More...</a></p><p><a href="page6.html"></a><br></p><p></p>
                     </div>
                 </div>
             </div>
