--- a/landsofmyth.html
+++ b/landsofmyth.html
@@ -50,7 +50,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
 
     
 
@@ -295,7 +295,7 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">Each region comes with a set of fully detailed quests. These are described on multiple pages and provide not only detailed setup instructions and special rules but also come with short story texts. All quests are thematically integrated into the region. Fulfilling a quest will not only grant the heroes Serendipity and Gold but will also reduce the Darkness Influence in that region (unlokcing special rewards or opening up new quests).&nbsp;<br></p>
+                                <p class="block-text mbr-fonts-style display-7">Each region comes with a set of fully detailed quests. These are described on multiple pages and provide not only detailed setup instructions and special rules but also come with short story texts. All quests are thematically integrated into the region. Fulfilling a quest will not only grant the heroes Serendipity and Gold but will also reduce the Darkness Influence in that region (unlocking special rewards or opening up new quests).&nbsp;<br></p>
                             </div>
                         </div>
 
