--- a/landsofmyth_downloads.html
+++ b/landsofmyth_downloads.html
@@ -49,7 +49,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="mbr-section content4 cid-rkkKRtmKrC" id="content4-l">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content4 cid-rkkKRtmKrC" id="content4-l">
 
     
 
@@ -145,7 +145,7 @@
                         <p class="mbr-text mbr-fonts-style display-7">Ur is a two skull region and can be explored after the heroes finished a one skull region e.g. Wheathall. It features new enemies to fight, new merchants, new quests and integrates with the first part of the official Blackwall Warrens or Shores of Kanis modules.</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://www.dropbox.com/sh/d5uemck0ym13wo8/AAAmMVSgjZVEyQzBdEYlJyApa?dl=0" class="btn btn-primary display-4" target="_blank">
-                            Download</a></div>
+                            v2.0 will be ready soon</a></div>
                 </div>
             </div>
 
@@ -176,7 +176,7 @@
                         <p class="mbr-text mbr-fonts-style display-7">Zehir is a two skull region and can be explored after the heroes finished the Ur region. It features new enemies to fight, new merchants, new quests and integrates with the second part of the official Shores of Kanis module.<br></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://www.dropbox.com/sh/0bcyjgq654q6vle/AACIfV8aoE0c7stGyfuIbGhza?dl=0" class="btn btn-primary display-4" target="_blank">
-                            Download</a></div>
+                            v2.0 will be ready soon</a></div>
                 </div>
             </div>
 
