--- a/thedeepdark.html
+++ b/thedeepdark.html
@@ -50,7 +50,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="header4 cid-rkkpMkDkSE" id="header4-a">
 
     
 
@@ -318,7 +318,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Get the complete <strong>The Deep Dark</strong> content and start your adventure!&nbsp;</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="thedeepdark_downloads.html" target="_blank">Download</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="thedeepdark_downloads.html" target="_blank">coming soon...</a></div>
             </div>
         </div>
     </div>
