--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="features2 cid-rkkCxGeZ45" id="features2-h">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="features2 cid-rkkCxGeZ45" id="features2-h">
 
     
 
@@ -202,7 +202,7 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ul>
-                    <li><strong>June 2019</strong> - Lands of Myth 2.0 (Rulebook &amp; Cards), Wheathall Region. Other regions will come soon!&nbsp;</li>
+                    <li><strong>June 2019</strong> - Lands of Myth 2.0 (Rulebook &amp; Cards), Wheathall Region. Other regions will come soon! You can download everything <a href="https://www.dropbox.com/sh/ncg64io38orj4z3/AAAZUpf4pvvSaOHhpVOX-IG4a?dl=0">here</a>.</li>
                 </ul>
             </div>
         </div>
