--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section class="features2 cid-rkkCxGeZ45" id="features2-h">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="features2 cid-rkkCxGeZ45" id="features2-h">
 
     
 
@@ -202,7 +202,7 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ul>
-                    <li><strong>July 2019 </strong>- Updated all Spriggan item cards (increased font size &amp; some art increases). You can download all Spriggan items <a href="https://www.dropbox.com/sh/z7oa4jugcpfiryn/AABZC4AVm7PYqgWI_HBLLBgHa?dl=0">here</a>.</li><li><strong>July 2019 </strong>- Ur region v2.0 is ready for download. You can download everything <a href="https://www.dropbox.com/sh/d5uemck0ym13wo8/AAAmMVSgjZVEyQzBdEYlJyApa?dl=0" target="_blank">here</a>.</li><li><strong>June 2019</strong> - Lands of Myth 2.0 (Rulebook &amp; Cards) and the Wheathall Region are ready for download. Other regions will come soon! You can download everything <a href="https://www.dropbox.com/sh/ncg64io38orj4z3/AAAZUpf4pvvSaOHhpVOX-IG4a?dl=0">here</a>.</li>
+                    <li><strong>July 27, 2019&nbsp;</strong>- Zehir region v2.0 is ready for download. You can download everything <a href="https://www.dropbox.com/sh/e02q3jwel2oc7ax/AAAwrCjZ32cbfHPLmxBSwdaaa?dl=0" target="_blank">here</a>.</li><li><strong>July 27, 2019 </strong>- I did small cosmetic corrections on green item cards of the Ur regions. I also added many new items to the hero variants.</li><li><strong>July 19, 2019 </strong>- Updated all Spriggan item cards (increased font size &amp; some art increases). You can download all Spriggan items <a href="https://www.dropbox.com/sh/z7oa4jugcpfiryn/AABZC4AVm7PYqgWI_HBLLBgHa?dl=0">here</a>.</li><li><strong>July 5, 2019 </strong>- Ur region v2.0 is ready for download. You can download everything <a href="https://www.dropbox.com/sh/d5uemck0ym13wo8/AAAmMVSgjZVEyQzBdEYlJyApa?dl=0" target="_blank">here</a>.</li><li><strong>June 29, 2019</strong> - Lands of Myth 2.0 (Rulebook &amp; Cards) and the Wheathall Region are ready for download. Other regions will come soon! You can download everything <a href="https://www.dropbox.com/sh/ncg64io38orj4z3/AAAZUpf4pvvSaOHhpVOX-IG4a?dl=0">here</a>.</li>
                 </ul>
             </div>
         </div>
