--- a/landsofmyth_downloads.html
+++ b/landsofmyth_downloads.html
@@ -49,7 +49,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content4 cid-rkkKRtmKrC" id="content4-l">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section content4 cid-rkkKRtmKrC" id="content4-l">
 
     
 
@@ -168,15 +168,15 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://www.dropbox.com/sh/e02q3jwel2oc7ax/AAAwrCjZ32cbfHPLmxBSwdaaa?dl=0"><img src="assets/images/zehir-download-676x596.png" alt="Rulebook download" title=""></a>
+                        <a href="https://www.dropbox.com/sh/e02q3jwel2oc7ax/AAAwrCjZ32cbfHPLmxBSwdaaa?dl=0" target="_blank"><img src="assets/images/zehir-download-676x596.png" alt="Rulebook download" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
                             Zehir region and cards</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">Zehir is a two skull region and can be explored after the heroes finished the Ur region. It features new enemies to fight, new merchants, new quests and integrates with the second part of the official Shores of Kanis module.<br></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://www.dropbox.com/sh/0bcyjgq654q6vle/AACIfV8aoE0c7stGyfuIbGhza?dl=0" class="btn btn-primary display-4" target="_blank">
-                            v2.0 will be ready soon</a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://www.dropbox.com/sh/e02q3jwel2oc7ax/AAAwrCjZ32cbfHPLmxBSwdaaa?dl=0" class="btn btn-primary display-4" target="_blank">
+                            Download</a></div>
                 </div>
             </div>
 
