Small update on Alchemist & Pupil

--- a/herovariants.html
+++ b/herovariants.html
@@ -50,7 +50,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header1 cid-rnJzOs30fe" id="header16-14">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="header1 cid-rnJzOs30fe" id="header16-14">
 
     
 
@@ -501,7 +501,7 @@
                             <div class="card-box">
                                 <p class="block-text mbr-fonts-style display-7">The Alchemist suffered from similar issues as the Trickster: a lot of <strong>Ingredient</strong> cards that did nothing but clutter the Hero Deck as well as a huge potential to not contribute anything meaningful for several hero cycles. The base deck only had 3 (!) Attack cards. The whole potion storing mechanic was never thought through, especially storing attack potions created a huge exploit potential (don’t do anything meaningful until you reach a mini-boss, agent or boss and use all your attack potions to kill the enemy instantly). 
 <br>
-<br>I’ve therefore completely reworked the Alchemist. He now features a reduced number of Ingredient cards and while you can use any Ingredient to build a potion, some Ingredients will influence the process. Moreover you now have the chance of some spectacular failures or successes when brewing potions. There are more Attack cards in his deck and you will gain the ability to brew Elixirs – special Ongoing potions that enhance the Alchemist’s abilities.<br><br> If you are interested in the design process or want to give feedback there's a thread on BGG <a href="https://boardgamegeek.com/thread/2049408/grimzims-alchemist-cards" target="_blank">here</a>.&nbsp;<br></p>
+<br>I’ve therefore completely reworked the Alchemist. He now features a reduced number of ingredient cards and while you can use any ingredient to build a potion, some Ingredients will influence the process. Moreover you now have the chance of some spectacular failures or successes when brewing potions. There are more Attack cards in his deck and you will gain the ability to brew <strong>Elixirs</strong> – special Ongoing potions that enhance the Alchemist’s abilities.<br><br> If you are interested in the design process or want to give feedback there's a thread on BGG <a href="https://boardgamegeek.com/thread/2049408/grimzims-alchemist-cards" target="_blank">here</a>.&nbsp;<br></p>
                             </div>
                         </div>
 
@@ -542,7 +542,7 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">One of the new special cards the Alchemist has are <strong>Unstable Reaction</strong> and <strong>Fortunate Discovery</strong>. These cards are not part of the hero deck but are kept aside. When using certain <strong>Ingredients</strong> like the shown <strong>Fireborn Sulphur</strong>, you may have to roll for an unstable reaction or fortunate discovery. Brewing Potions during combat is not the easiest thing to do...<br><br>You can also see one of the new Elixir cards: <strong>Elixir of Agility</strong>. These Journeyman level cards allow you to permanently enhance your abilities. However, when the effect wears off, you have to pay a price...</p>
+                                <p class="block-text mbr-fonts-style display-7">One of the new special cards the Alchemist has are <strong>Unstable Reaction</strong> and <strong>Fortunate Discovery</strong>. These cards are not part of the hero deck but are kept aside. When using certain <strong>Ingredients</strong> like the shown <em>Fireborn Sulphur</em>, you may have to roll for an unstable reaction or fortunate discovery. Brewing Potions during combat is not the easiest thing to do...<br><br>You can also see one of the new Elixir cards: <em>Elixir of Agility</em>. These Journeyman level cards allow you to permanently enhance your abilities. However, when the effect wears off, you have to pay a price...</p>
                             </div>
                         </div>
 
