--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="features2 cid-rkkCxGeZ45" id="features2-h">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="features2 cid-rkkCxGeZ45" id="features2-h">
 
     
 
@@ -136,7 +136,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2040054994" target="_blank"><img src="assets/images/ttsimulatormod-676x541.png" alt="Lands of Myth" title=""></a>
+                        <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2040054994"><img src="assets/images/ttsimulatormod-676x541.png" alt="Lands of Myth" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Lands of Myth on Tabletop Simulator&nbsp;</h4>
